--- a/.classpath
+++ b/.classpath
@@ -2,10 +2,13 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
-	<classpathentry kind="lib" path="C:/Jars/selenium-java-2.53.1.jar"/>
-	<classpathentry kind="lib" path="C:/Jars/selenium-server-standalone-2.53.1.jar"/>
-	<classpathentry kind="con" path="org.testng.TESTNG_CONTAINER"/>
-	<classpathentry kind="lib" path="C:/Jars/extentreports-java-v2.41.1/extentreports-java-2.41.1.jar"/>
-	<classpathentry kind="lib" path="C:/Jars/freemarker-2.3.23.jar"/>
+	<classpathentry kind="lib" path="N:/eclipseprojects/TestNgPractice/jars/extentreports-java-2.41.1.jar"/>
+	<classpathentry kind="lib" path="N:/eclipseprojects/TestNgPractice/jars/freemarker-2.3.23.jar"/>
+	<classpathentry kind="lib" path="N:/eclipseprojects/TestNgPractice/jars/selenium-java-2.53.1.jar"/>
+	<classpathentry kind="lib" path="N:/eclipseprojects/TestNgPractice/jars/selenium-server-standalone-2.53.1.jar"/>
+	<classpathentry kind="lib" path="N:/eclipseprojects/TestNgPractice/jars/com.beust.jcommander_1.72.0.jar"/>
+	<classpathentry kind="lib" path="N:/eclipseprojects/TestNgPractice/jars/org.apache-extras.beanshell.bsh_2.0.0.b6.jar"/>
+	<classpathentry kind="lib" path="N:/eclipseprojects/TestNgPractice/jars/org.testng_6.14.2.r201802161450.jar"/>
+	<classpathentry kind="lib" path="N:/eclipseprojects/TestNgPractice/jars/org.yaml.snakeyaml_1.17.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
